--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1031,7 +1031,10 @@ makeComments(&#39;Avatar&#39;);
 variables().avatar_comment = storyComment;
 &lt;&lt;/script&gt;&gt;
 
-&lt;&lt;live $avatar_comment&gt;&gt;
+&lt;&lt;liveblock&gt;&gt; 
+$avatar_comment
+&lt;&lt;/liveblock&gt;&gt; 
+
 
 </tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
