--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -637,8 +637,10 @@ window.makeComments = async function(character) {
             initialCheckpoint = currentDistance;
         } else if (currentSegment === 1) {
             storyComment=approaching[Math.floor(Math.random() * approaching.length)];
+          console.log(storyComment);
         } else {
             storyComment=randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
+          console.log(storyComment);
         }
     }, 1000); // Check for updates every second
 };
@@ -1027,8 +1029,8 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set $$avatar_comment to &#39;&#39;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeComments(&#39;Avatar&#39;);
-variables().avatar_comment = storyComment;
+
+variables().avatar_comment = makeComments(&#39;Avatar&#39;);
 &lt;&lt;/script&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt; 
