--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -576,9 +576,9 @@ let randomSentences = []; // Array to store pre-generated random sentences
 let totalSegments;
 let storyComment;
 
-window.makeComments = async function(character) {
-    // Fetch JSON data
-    const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
+window.makeComments = function(character) {
+    // Fetch JSON data synchronously
+    const jsonData = fetchJSONFileSync(sentencesSource, cachedSentences);
 
     // Extract data based on the character parameter
     let observes, approaching, soundscape;
@@ -588,7 +588,7 @@ window.makeComments = async function(character) {
         observes = jsonData.hachi_observes;
     } else {
         console.error('Invalid character parameter');
-        return;
+        return null;
     }
     approaching = jsonData.approaching;
     soundscape = jsonData.soundscape;
@@ -636,14 +636,13 @@ window.makeComments = async function(character) {
             // Reset the initial checkpoint for the next segment
             initialCheckpoint = currentDistance;
         } else if (currentSegment === 1) {
-            storyComment=approaching[Math.floor(Math.random() * approaching.length)];
-          console.log(storyComment);
+            return approaching[Math.floor(Math.random() * approaching.length)];
         } else {
-            storyComment=randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
-          console.log(storyComment);
+            return randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
         }
     }, 1000); // Check for updates every second
 };
+
 
 
   //Last line of the function. KEEP
@@ -1029,8 +1028,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set $$avatar_comment to &#39;&#39;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeComments(&#39;Avatar&#39;);
-variables().avatar_comment = storyComment;
+variables().avatar_comment  = makeComments(&#39;Avatar&#39;);
 &lt;&lt;/script&gt;&gt;
 
 &lt;&lt;liveblock&gt;&gt; 
