--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 					return;
 				}
 
-				// Save the original console.log and console.error functions
+				// Save the original console.log and console.error functions.
 				var originalConsoleLog = console.log;
 				var originalConsoleError = console.error;
 
