--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1029,6 +1029,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 
 &lt;&lt;script&gt;&gt;
 variables().avatar_comment  = makeComments(&#39;Avatar&#39;);
+console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
 
 
