--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 				var logMessages = []; // Array to store log messages
 				var errorMessages = []; // Array to store error messages
 
-				// Override console.log to append messages to the div
+				// Override console.log to append messages to the div.
 				console.log = function(...args) {
 					originalConsoleLog(...args);
 					var consoleMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' '); // Convert objects to strings
