--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -576,9 +576,9 @@ let randomSentences = []; // Array to store pre-generated random sentences
 let totalSegments;
 let storyComment;
 
-window.makeComments = function(character) {
-    // Fetch JSON data synchronously
-    const jsonData = fetchJSONFileSync(sentencesSource, cachedSentences);
+window.makeComments = async function(character) {
+    // Fetch JSON data
+    const jsonData = await fetchJSONFile(sentencesSource, cachedSentences);
 
     // Extract data based on the character parameter
     let observes, approaching, soundscape;
@@ -588,7 +588,7 @@ window.makeComments = function(character) {
         observes = jsonData.hachi_observes;
     } else {
         console.error('Invalid character parameter');
-        return null;
+        return;
     }
     approaching = jsonData.approaching;
     soundscape = jsonData.soundscape;
@@ -635,15 +635,16 @@ window.makeComments = function(character) {
         if (currentSegment >= totalSegments) {
             // Reset the initial checkpoint for the next segment
             initialCheckpoint = currentDistance;
+          console.log(storyComment);
         } else if (currentSegment === 1) {
-            return approaching[Math.floor(Math.random() * approaching.length)];
+            storyComment=(approaching[Math.floor(Math.random() * approaching.length)]);
+          console.log(storyComment);
         } else {
-            return randomSentences[currentSegment - 2]; // Subtract 2 because the first segment is 1-based
+            storyComment=(randomSentences[currentSegment - 2]); // Subtract 2 because the first segment is 1-based
+          console.log(storyComment);
         }
     }, 1000); // Check for updates every second
 };
-
-
 
   //Last line of the function. KEEP
 })
@@ -1029,6 +1030,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;Avatar&#39;);
+variables().avatar_comment)=
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
 
