--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
 			let previousMovements = {};
 
-			// Function to check if two objects have the same keys and values
+			// Function to check if two objects have the same keys and values..
 			function objectsEqual(obj1, obj2) {
 				const keys1 = Object.keys(obj1);
 				const keys2 = Object.keys(obj2);
