--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1030,7 +1030,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;Avatar&#39;);
-variables().avatar_comment)=storyComment;
+variables().avatar_comment=storyComment;
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
 
