--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -574,7 +574,7 @@ let characterSentenceHistory = [];
 let initialCheckpoint;
 let randomSentences = []; // Array to store pre-generated random sentences
 let totalSegments;
-let storyComment;
+var storyComment;
 
 window.makeComments = async function(character) {
     // Fetch JSON data
@@ -635,7 +635,6 @@ window.makeComments = async function(character) {
         if (currentSegment >= totalSegments) {
             // Reset the initial checkpoint for the next segment
             initialCheckpoint = currentDistance;
-          console.log(storyComment);
         } else if (currentSegment === 1) {
             storyComment=approaching[Math.floor(Math.random() * approaching.length)];
           console.log(storyComment);
@@ -661,6 +660,7 @@ window.makeComments = async function(character) {
 &lt;&lt;set $avatar_passage to avatar_passage&gt;&gt;
 &lt;&lt;set $avatar_status to avatar_status&gt;&gt;
 &lt;&lt;set $avatar_speed to avatar_speed&gt;&gt;
+&lt;&lt;set $avatar_comment to &gt;&gt;
 
 &lt;&lt;set $hachi_checkpoint to hachi_checkpoint&gt;&gt;
 &lt;&lt;set $hachi_checkpoint_dist to hachi_checkpoint_dist&gt;&gt;
@@ -1029,8 +1029,7 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set $avatar_comment to &#39;Hello&#39;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-makeComments(&#39;Avatar&#39;);
-variables().avatar_comment)=storyComment;
+variables().avatar_comment=makeComments(&#39;Avatar&#39;);
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
 
