--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1029,8 +1029,8 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set $avatar_comment to &#39;Hello&#39;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
-variables().avatar_comment=makeComments(&#39;Avatar&#39;);
-console.log(variables().avatar_comment);
+makeComments(&#39;Avatar&#39;);
+console.log(variables().storyComment);
 &lt;&lt;/script&gt;&gt;
 
 &lt;&lt;live $avatar_comment&gt;&gt;</tw-passagedata></tw-storydata>
