--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 			function receiveData(data) {
 				let values = data.split(",");
 				//console.log(values);
-				tagID = values.pop(); // Remove and store the last element as tagID.
+				tagID = values.pop(); // Remove and store the last element as tagID..
 				readTag();
 				if (values.length === numPotentiometers) { // Check if the length of values is 8
 					for (let i = 0; i < values.length; i++) {
