--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -630,7 +630,7 @@ window.makeComments = async function(character) {
 
         // Determine the current segment based on the progress
         let currentSegment = Math.ceil(progress / 15);
-      	console.log("Current segment: "+currentSegment);
+      	console.log("Total segments: "+totalSegments+" Current segment: "+currentSegment);
 
         // Display the text for the current segment only
         if (currentSegment >= totalSegments) {
