--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1037,8 +1037,10 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 makeComments(&#39;Avatar&#39;);
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
-&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 &lt;&lt;live $avatar_comment&gt;&gt;
+&lt;&lt;liveblock&gt;&gt;
+&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
+&lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
