--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1038,9 +1038,11 @@ makeComments(&#39;Avatar&#39;);
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
 &lt;&lt;live $avatar_comment&gt;&gt;
+
 &lt;&lt;liveblock&gt;&gt;
 &lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
-&lt;&lt;/liveblock&gt;&gt;
+ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
+ &lt;&lt;/liveblock&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
