--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1036,11 +1036,20 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;script&gt;&gt;
 makeComments(&#39;Avatar&#39;);
 console.log(variables().avatar_comment);
-writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
-
 &lt;&lt;live $avatar_comment&gt;&gt;
 
+&lt;&lt;set  $prevComment to $avatar_comment&gt;&gt;
+
+&lt;&lt;repeat 2s&gt;&gt;
+writing
+	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
+	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
+		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
+		/* Your script to run when the variable has changed goes here */
+		writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_comment);
+	&lt;&lt;/if&gt;&gt;
+&lt;&lt;/repeat&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
