--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1042,12 +1042,13 @@ console.log(variables().avatar_comment);
 &lt;&lt;set  $prevComment to $avatar_comment&gt;&gt;
 
 &lt;&lt;repeat 2s&gt;&gt;
-writing
 	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
-		/* Your script to run when the variable has changed goes here */
-		writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_comment);
+        writing
+          &lt;&lt;script&gt;&gt;
+          	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_comment);
+          &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
