--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1042,9 +1042,8 @@ console.log(variables().avatar_comment);
 	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
-        &lt;&lt;print $avatar_comment&gt;&gt; &gt;&gt;
           &lt;&lt;script&gt;&gt;
-          	writeToAvatar(&#39;avatar_passage&#39;,avatar_comment);
+          	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_comment);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
