--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1043,11 +1043,10 @@ console.log(variables().avatar_comment);
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
-          	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_comment);
+          	writeToAvatar(&#39;avatar_passage&#39;,avatar_comment);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
-
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
