--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1040,8 +1040,8 @@ console.log(variables().avatar_comment);
 &lt;&lt;set  $prevComment to $avatar_comment &gt;&gt;
 &lt;&lt;repeat 500ms&gt;&gt;
 	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
-    &lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
+  		&lt;&lt;capture $avatar_passage&gt;&gt;&lt;&lt;print $avatar_comment&gt;&gt; &lt;&lt;/capture&gt;&gt; 
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
           	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
