--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1041,7 +1041,8 @@ console.log(variables().avatar_comment);
 &lt;&lt;repeat 500ms&gt;&gt;
 	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
-    	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
+    	&lt;&lt;set $tmp_avatar_passage to $avatar_comment&gt;&gt;
+        &lt;&lt;capture $avatar_passage&gt;&gt;&lt;&lt;print $tmp_avatar_passage&gt;&gt;&lt;&lt;/capture&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
           	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
