--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1044,7 +1044,12 @@ console.log(variables().avatar_comment);
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
+        &lt;div id=&quot;renderedTextContainer&quot;&gt;&lt;/div&gt;
           &lt;&lt;script&gt;&gt;
+          var container = document.getElementById(&#39;renderedTextContainer&#39;);
+          Wikifier.wikifyEval(variables().avatar_passage, container);
+          var renderedText = container.textContent;
+          console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
