--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1046,8 +1046,9 @@ console.log(variables().avatar_comment);
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
         &lt;div id=&quot;renderedTextContainer&quot;&gt;&lt;/div&gt;
           &lt;&lt;script&gt;&gt;
+          var passage = variables().avatar_passage;
           var container = document.getElementById(&#39;renderedTextContainer&#39;);
-          Wikifier.wikifyEval(variables().avatar_passage, container);
+          Wikifier.wikifyEval(passage, container);
           var renderedText = container.textContent;
           console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
