--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1052,7 +1052,7 @@ console.log(variables().avatar_comment);
           Wikifier.wikifyEval(passage, container);
           var renderedText = container.textContent;
           console.log(renderedText);
-          	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
+          	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
