--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1050,7 +1050,7 @@ console.log(variables().avatar_comment);
           var passage = variables().avatar_passage;
           var container = document.getElementById(&#39;renderedTextContainer&#39;);
           Wikifier.wikifyEval(passage, container);
-          var renderedText = container.textContent;
+          var renderedText = container.textContent.trim();
           console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
