--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1047,9 +1047,8 @@ console.log(variables().avatar_comment);
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
-          var passage = variables().avatar_passage;
-          var container = document.getElementById(&#39;renderedTextContainer&#39;);
-          Wikifier.wikifyEval(passage, container);
+          var container = document.getElementById(&#39;avatarStory&#39;);
+          Wikifier.wikify(container);
           var renderedText = container.textContent.trim();
           console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
