--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1047,10 +1047,10 @@ console.log(variables().avatar_comment);
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
-          var container = document.getElementById(&#39;avatarStory&#39;);
-          Wikifier.wikify(container);
-          var renderedText = container.textContent.trim();
-          console.log(renderedText);
+			var container = document.getElementById(&#39;avatarStory&#39;);         
+            var passageText = container.textContent.trim();
+ 			var renderedText = Wikifier.wikifyEval(passageText);
+ 			console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
