--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1047,10 +1047,11 @@ console.log(variables().avatar_comment);
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
-			var container = document.getElementById(&#39;avatarStory&#39;);         
-            var passageText = container.textContent.trim();
- 			var renderedText = Wikifier.wikifyEval(passageText);
- 			console.log(renderedText);
+			var bottomContainer = document.getElementById(&#39;bottomContainer&#39;);            
+            var avatarStory = bottomContainer.querySelector(&#39;#avatarStory&#39;);
+            var passageText = avatarStory.textContent.trim();
+			var renderedText = Wikifier.wikifyEval(passageText);
+			console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
