--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1035,6 +1035,8 @@ writeToAvatar(&#39;avatar_passage&#39;,avatar_passage);
 &lt;&lt;set $avatar_comment to &quot;&quot;&gt;&gt;
 
 &lt;&lt;script&gt;&gt;
+console.log(document.getElementById(&#39;bottomContainer&#39;)); // Check if bottomContainer is found
+console.log(document.getElementById(&#39;bottomContainer&#39;).querySelector(&#39;#avatarStory&#39;)); // Check if avatarStory is found
 makeComments(&#39;Avatar&#39;);
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
@@ -1042,15 +1044,14 @@ console.log(variables().avatar_comment);
 
 &lt;&lt;set  $prevComment to $avatar_comment &gt;&gt;
 &lt;&lt;repeat 500ms&gt;&gt;
+
 	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
 	&lt;&lt;if  $currentComment !== $prevComment&gt;&gt;
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
-          &lt;&lt;script&gt;&gt;
-			var bottomContainer = document.getElementById(&#39;bottomContainer&#39;);            
-            var avatarStory = bottomContainer.querySelector(&#39;#avatarStory&#39;);
-            var passageText = avatarStory.textContent.trim();
-			var renderedText = Wikifier.wikifyEval(passageText);
+            var container = document.querySelector(&#39;#stories .passages .passage-main .bottomContainer #avatarStory&#39;);
+            var passageText = container.textContent.trim();
+            var renderedText = Wikifier.wikifyEval(passageText);
 			console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
           &lt;&lt;/script&gt;&gt;
