--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1048,7 +1048,8 @@ console.log(variables().avatar_comment);
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
          	var renderedText = Wikifier.wikifyEval(variables().avatar_passage);
-          	writeToAvatar(&#39;avatar_passage&#39;,renderedText);
+            consolo.log(renderedText);
+          	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
