--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1046,7 +1046,7 @@ console.log(variables().avatar_comment);
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
          	var renderedText = Wikifier.wikifyEval(variables().avatar_passage);
-            consol.log(renderedText);
+            console.log(renderedText);
           	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
