--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -783,7 +783,7 @@ Loading variables...
 
 &lt;div id=&quot;bottomContainer&quot;&gt;
 	&lt;div id=&quot;avatar_story&quot;&gt;
-		&lt;&lt;include &quot;avatar_1&quot;&gt;&gt;
+		&lt;&lt;include &quot;sentences&quot;&gt;&gt;
 	&lt;/div&gt;
 	&lt;div id=&quot;hachi_story&quot;&gt;
        		 &lt;&lt;include &quot;hachi_1&quot;&gt;&gt;
