--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1044,9 +1044,10 @@ console.log(variables().avatar_comment);
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
-          	const renderedText = $((document).createDocumentFragment()).wiki(variables().avatar_passage).text();
-            console.log(renderedText);
-          	writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
+          var passage_temp = variables().avatar_passage);
+          const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
+          console.log(renderedText);
+          writeToAvatar(&#39;avatar_passage&#39;,variables().avatar_passage);
           &lt;&lt;/script&gt;&gt;
 	&lt;&lt;/if&gt;&gt;
 &lt;&lt;/repeat&gt;&gt;
