--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1044,7 +1044,7 @@ console.log(variables().avatar_comment);
     	&lt;&lt;set $avatar_passage to $avatar_comment&gt;&gt;
 		&lt;&lt;set $prevComment to $currentComment&gt;&gt;
           &lt;&lt;script&gt;&gt;
-          var passage_temp = variables().avatar_passage);
+          var passage_temp = variables().avatar_passage;
           const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();
           console.log(renderedText);
           writeToAvatar(&#39;avatar_passage&#39;,renderedText);
