Comment generator is finally working.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1037,6 +1037,8 @@ makeComments(&#39;Avatar&#39;);
 console.log(variables().avatar_comment);
 &lt;&lt;/script&gt;&gt;
 
+&lt;&lt;live $avatar_comment&gt;&gt;
+
 &lt;&lt;set  $prevComment to $avatar_comment &gt;&gt;
 &lt;&lt;repeat 500ms&gt;&gt;
 	&lt;&lt;set  $currentComment to $avatar_comment&gt;&gt;
